# crawler

./: .gdb_history  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
.ccls-cache/@@Users@pedro@dev@antfood@crawler/: @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@Availability.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@AvailabilityInternal.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@__wctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctermid.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_ctype.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_locale.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_stdio.h.blob  @Applications@Xcode.app@Contents@Developer@Platforms@MacOSX.platform@Developer@SDKs@MacOSX.sdk@usr@include@_types.h.blob  (+273 more)
icon/: crawler.icns
include/: changeset.hpp  crawler.hpp  directory.hpp  input_component.hpp  lexer.hpp  user_input.hpp  validator.hpp  warning.hpp
lib/: CMakeLists.txt
releases/: crawler-v0.1.2
src/: changeset.cpp  crawler.cpp  directory.cpp  input_component.cpp  lexer.cpp  main.cpp  user_input.cpp  validator.cpp  warning.cpp
(+22 files in other folders)
